# System2-FormalConstruct

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  lean-toolchain  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: formalize.md
.claude/commands/: formalize.md
.github/workflows/: test.yml
benchmarking/: CHANGELOG.md  README.md  RESULTS.md  __init__.py  __main__.py  config.py  trace_agent.py
benchmarking/data/: curate.py  ground_truth.json  keywords.json  problems.json  problems_sample10.json
benchmarking/evaluator/: __init__.py  classify.py  score.py  verify.py
benchmarking/report/: __init__.py  generate.py  template.md.j2
benchmarking/runner/: __init__.py  batch.py  capture.py  invoke.py
benchmarking/tests/: test_curate.py  test_evaluator.py
docs/: quickstart.md  supported-latex.md
formalconstruct/: __init__.py  __main__.py
formalconstruct/agents/: __init__.py  lean_scaffolding.py
formalconstruct/core/: __init__.py  config.py  exceptions.py  expression_parser.py  state_manager.py  telemetry.py
formalconstruct/domains/: __init__.py  composite_mapper.py  continuous_opt_mapper.py  game_theory_mapper.py  registry.py
formalconstruct/mcp_client/: __init__.py  connection.py  parsers.py  tools.py
formalconstruct/prompts/: __init__.py  error_feedback.jinja2  lean_scaffold.jinja2  loader.py  tactic_generation.jinja2
formalconstruct/schemas/: __init__.py  _expression_check.py  axle_responses.py  failures.py  lean_source.py  problem_spec.py  translation.py
plugin/: system2.overlay.json
plugin/.claude-plugin/: plugin.json
scripts/: sync_version.py
tests/: conftest.py  test_compose_smoke.py
(+49 files in other folders)
